# essense-shop

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  products.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  database.py  session.py
backend/app/models/: brand.py  order.py  product.py  user.py
backend/app/schemas/: auth.py  user.py
docs/: API_SPEC.md  DATABASE_SCHEMA.md  DEVELOPMENT_TIMELINE.md  OPERATIONS_SYSTEM.md  PRD.md
